# approval-service

./: .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
app/: auth.py  config.py  db.py  errors.py  events.py  logging.py  main.py  models.py  repository.py  schemas.py  service.py
app/api/: approval_requests.py  health.py
migrations/: env.py
migrations/versions/: 0001_initial.py
tests/: conftest.py  test_approval_requests.py  test_auth.py  test_health.py  test_idempotency.py  test_isolation.py  test_state_machine.py
